# PythonVK

./: CMakeLists.txt  README.md  main.cpp  tutorial_complete.cpp
include/katra/: katra.h
include/katra/buffer/: buffer.h
include/katra/command/: command_buffer.h  command_pool.h
include/katra/descriptor/: descriptor_layout.h  descriptor_pool.h  descriptor_set.h
include/katra/device/: logical_device.h  physical_device.h
include/katra/image/: image.h  image_region.h  image_subresource.h  image_view.h  sampler.h
include/katra/memory/: allocation.h  image_barrier.h
include/katra/pipeline/: depth_stencil.h  graphics_pipeline.h
include/katra/render/: graphics_pipeline.h  render_pass.h  swap_chain.h  vertex_input.h
include/katra/util/: includes.h  stb_impl.h  tinyobjloader_impl.h
include/pythonvk/: pythonvk.h
include/pythonvk/debug/: debugger.h
include/pythonvk/device/: logical_device.h  physical_device.h
include/pythonvk/render/: framebuffer.h  graphics_pipeline.h  instance.h  render_pass.h  shader_module.h  surface.h  swap_chain.h  window.h
include/pythonvk/util/: constants.h  includes.h
shaders/: shader.frag  shader.vert
src/buffer/: buffer.cpp
src/command/: command_buffer.cpp
src/debug/: debugger.cpp
src/descriptor/: descriptor_layout.cpp  descriptor_pool.cpp  descriptor_set.cpp
src/device/: logical_device.cpp  physical_device.cpp
src/image/: image.cpp  image_subresource.cpp  image_view.cpp  sampler.cpp
src/memory/: allocation.cpp  image_barrier.cpp
src/pipeline/: depth_stencil.cpp  graphics_pipeline.cpp  vertex_input.cpp
src/render/: framebuffer.cpp  graphics_pipeline.cpp  instance.cpp  render_pass.cpp  swap_chain.cpp  vertex_input.cpp
tools/: unix_shader_compile.sh  windows_shader_compile.bat
